--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <h1>About <span>Me</span></h1>
               </div>
               <br><br>
-              <p>I'm huseyn abdullayev Data Scientist and ML Engineer with serval years of experience in data science
+              <p>I'm Data Scientist and ML Engineer with serval years of experience in data science
                   and engineering, specializing in machine learning in the automotive and consulting industries, i can 
                   develop MLOps systems that automate machine learning workflows. My expertise in ML algorithms and optimization
                   effectively contributes to cost reduction and time savings.
@@ -179,13 +179,13 @@
                               <i><span class="qualification__subtitle">It-novum GmbHS</span></i>
                               <div class="qualification__description">
                                   <!-- Display the first point -->
-                                  <p> • Designed and implemented an end-to-end MLOps solution using open-source tools that optimized workload for data science teams and reduced costs by 30%.</p><br>
+                                  <p> • •	Utilized Snowflake, Docker, GitHub Actions, and Jenkins to create end-to-end workflows that enhanced ML model development and deployment efficiency, while integrating MLflow for experiment tracking and model management to ensure reproducibility and transparency.</p><br>
                                   <!-- Hide the remaining points initially -->
                                   <div class="more-points" style="display: none;">
-                                      <p> • Developed an ML model for anomaly detection for preventive maintenance in an automotive company, identifying potential failure causes and reducing downtime by 67%.</p><br>
+                                      <p> • Leveraged Snowpark to automate data loading and preprocessing in Snowflake, optimizing data handling and increasing scalability for large datasets, and integrated AWS services such as S3 and Snowflake to provide scalable data storage and processing for extensive machine learning tasks.</p><br>
                                       <p> • Participated in a project to build an MLOps infrastructure for a client, including setting up a data cleaning pipeline and infrastructure for the data science team for training and monitoring models in Snowflake.</p><br>
-                                      <p> • Implemented and deployed an autoencoder ML model on Snowflake to detect system faults in pump operations, which increased operational efficiency by 45%.</p><br>
-                                      <p> • Implemented a comprehensive MLOps framework using open-source tools, which streamlined CI/CD processes, enhanced model tracking, and monitoring, leading to a 20% reduction in operational delays and improved model deployment cycles for the client’s Data Science team.</p>
+                                      <p> • Deployed ML models using Docker, ensuring reliable and reproducible deployments across development, testing, and production stages.</p><br>
+                                      <p> • Developed a dashboard in ThingsBoard, allowing customers to track datasets and significantly improving data monitoring.</p>
                                   </div>
                                   <!-- Read more button -->
                               <button class="read-more-btn">Read more</button>
