--- a/index.html
+++ b/index.html
@@ -527,9 +527,9 @@
           <div class="card-item swiper-slide">
             <div class="blog_card">  
               <div class="blog_content">
-                <h1>End-to-End Machine Learning (ML) Lifecycle</h1>
-                <p>ML Pipeline, Mage AI, CI/CD, Tes ng | Medium. </p><br>
-                <a class="btn_primary" href="#" target="_blank">Read More</a>
+                <h1>End-to-end machine learning (ML) lifecycle — Mage AI</h1>
+                <p>ML Pipeline, Mage AI, CI/CD | Medium. </p><br>
+                <a class="btn_primary" href="https://medium.com/@huseynabdullayev_34266/end-to-end-machine-learning-ml-lifecycle-mage-ai-bcb315b4b8f0" target="_blank">Read More</a>
               </div>
             </div>
           </div>
@@ -539,7 +539,7 @@
               <div class="blog_content">
                 <h1>The Role of Data Science in Sustainability Analysis</h1>
                 <p>ML algorithms | Medium. </p><br>
-                <a class="btn_primary" href="#" target="_blank">Read More</a>
+                <a class="btn_primary" href="https://medium.com/@huseynabdullayev_34266/the-role-of-data-science-in-sustainability-analysis-14d3f726bc68" target="_blank">Read More</a>
               </div>
             </div>
           </div>
@@ -549,7 +549,7 @@
               <div class="blog_content">
                 <h1>Experiment Tracking with MLflow</h1>
                 <p>Python, MLflow | Medium. </p><br><br><br><br>
-                <a class="btn_primary" href="#" target="_blank">Read More</a>
+                <a class="btn_primary" href="https://medium.com/@huseynabdullayev_34266/experiment-tracking-with-mlflow-45d05f3b22e4" target="_blank">Read More</a>
               </div>
             </div>
           </div>
@@ -559,7 +559,7 @@
               <div class="blog_content">
                 <h1>Is Big Data Dead?!</h1>
                 <p>Relevance of big data vs. small data | Medium. </p><br><br><br><br>
-                <a class="btn_primary" href="#" target="_blank">Read More</a>
+                <a class="btn_primary" href="https://medium.com/@huseynabdullayev_34266/is-big-data-dead-75c5c718d591" target="_blank">Read More</a>
               </div>
             </div>
           </div>
@@ -567,9 +567,9 @@
           <div class="card-item swiper-slide">
             <div class="blog_card">
               <div class="blog_content">
-                <h1>Automated ML Training and Deployment Using GitHub</h1>
+                <h1>Mastering MLOps: How I Automated Model Training and Deployment Using GitHub Actions</h1>
                 <p>CI/CD, Docker, FastAPI  | Medium.</p>
-                <a class="btn_primary" href="#" target="_blank">Read More</a>
+                <a class="btn_primary" href="https://medium.com/@huseynabdullayev_34266/machine-learning-deployment-f5e2404cc31b" target="_blank">Read More</a>
               </div>
             </div>
           </div>
