--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                               <i><span class="qualification__subtitle">It-novum GmbHS</span></i>
                               <div class="qualification__description">
                                   <!-- Display the first point -->
-                                  <p> • •	Utilized Snowflake, Docker, GitHub Actions, and Jenkins to create end-to-end workflows that enhanced ML model development and deployment efficiency, while integrating MLflow for experiment tracking and model management to ensure reproducibility and transparency.</p><br>
+                                  <p> •	Utilized Snowflake, Docker, GitHub Actions, and Jenkins to create end-to-end workflows that enhanced ML model development and deployment efficiency, while integrating MLflow for experiment tracking and model management to ensure reproducibility and transparency.</p><br>
                                   <!-- Hide the remaining points initially -->
                                   <div class="more-points" style="display: none;">
                                       <p> • Leveraged Snowpark to automate data loading and preprocessing in Snowflake, optimizing data handling and increasing scalability for large datasets, and integrated AWS services such as S3 and Snowflake to provide scalable data storage and processing for extensive machine learning tasks.</p><br>
