--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
           <div class="card-item swiper-slide">
             <div class="blog_card">
               <div class="blog_content">
-                <h1>Mastering MLOps: How I Automated Model Training and Deployment Using GitHub Actions</h1>
+                <h1>How I Automated Model Training and Deployment Using GitHub Actions</h1>
                 <p>CI/CD, Docker, FastAPI  | Medium.</p>
                 <a class="btn_primary" href="https://medium.com/@huseynabdullayev_34266/machine-learning-deployment-f5e2404cc31b" target="_blank">Read More</a>
               </div>
