--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <!--home section start-->
       <div class="content" id="home">
           <div class="text">
-              <h3><span class="name" style="color: #769EAF;">Huseyn Abdullayev</span><br><br>Data Scientist &amp; ML Engineer</h3><br>
+              <h3><span class="name" style="color: #769EAF;">Huseyn Abdullayev</span><br> ML Engineer <br> &amp;  Data Scientist</h3><br>
               <div class="media">
                   <i class="fa-brands fa-facebook"></i>
                   <i class="fa-brands fa-linkedin-in"></i>
@@ -38,7 +38,7 @@
                   <i class="fa-regular fa-envelope"></i>
               </div><br>
               <!-- Download CV button -->
-              <a href="cv.docx" download="cv.docx">
+              <a href="cv.docx" download="cv.pdf">
                   <button class="download">Download CV <i class="fa-regular fa-circle-down"></i></button>
               </a>
           </div>
@@ -56,7 +56,7 @@
                   <h1>About <span>Me</span></h1>
               </div>
               <br><br>
-              <p>I'm Data Scientist and ML Engineer with serval years of experience in data science
+              <p> I'm  ML Engineer with serval years of experience in data science
                   and engineering, specializing in machine learning in the automotive and consulting industries, i can 
                   develop MLOps systems that automate machine learning workflows. My expertise in ML algorithms and optimization
                   effectively contributes to cost reduction and time savings.
