--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <!--home section start-->
       <div class="content" id="home">
           <div class="text">
-              <h3><span class="name" style="color: #769EAF;">Huseyn Abdullayev</span><br> ML Engineer <br> &amp;  Data Scientist</h3><br>
+              <h3><span class="name" style="color: #769EAF;">Huseyn Abdullayev</span><br><br> ML Engineer &amp; Data Scientist  </h3><br>
               <div class="media">
                   <i class="fa-brands fa-facebook"></i>
                   <i class="fa-brands fa-linkedin-in"></i>
@@ -56,7 +56,7 @@
                   <h1>About <span>Me</span></h1>
               </div>
               <br><br>
-              <p> I'm  ML Engineer with serval years of experience in data science
+              <p>I'm  ML Engineer with serval years of experience in data science
                   and engineering, specializing in machine learning in the automotive and consulting industries, i can 
                   develop MLOps systems that automate machine learning workflows. My expertise in ML algorithms and optimization
                   effectively contributes to cost reduction and time savings.
