--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <i class="fa-regular fa-envelope"></i>
               </div><br>
               <!-- Download CV button -->
-              <a href="cv.docx" download="cv.pdf">
+              <a href="cv.docx" download="cv.docx">
                   <button class="download">Download CV <i class="fa-regular fa-circle-down"></i></button>
               </a>
           </div>
