--- a/index.html
+++ b/index.html
@@ -31,11 +31,26 @@
       <div class="content" id="home">
           <div class="text">
               <h3><span class="name" style="color: #769EAF;">Huseyn Abdullayev</span><br><br> Data and Analytics Solutions </h3><br>
-              <div class="media">
+              <!-- <div class="media">
                   <i class="fa-brands fa-facebook"></i>
                   <i class="fa-brands fa-linkedin-in"></i>
                   <i class="fa-brands fa-github"></i>
-                  <i class="fa-regular fa-envelope"></i>
+                  <i class="fa-regular fa-envelope"></i> -->
+
+
+                <div class="media">
+                    <a href="https://www.linkedin.com/in/huseyn-abdullayev-566a74123/" target="_blank">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://github.com/HuseynA28/AdPredictor-Web-services-model-deployment" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="mailto:huseyn_abdullayev@outlook.de">
+                        <i class="fa-regular fa-envelope"></i>
+                    </a>
+                </div>
+                
+
               </div><br>
               <!-- Download CV button -->
               <a href="cv.docx" download="cv.docx">
