--- a/index.html
+++ b/index.html
@@ -31,24 +31,16 @@
       <div class="content" id="home">
           <div class="text">
               <h3><span class="name" style="color: #769EAF;">Huseyn Abdullayev</span><br><br> Data and Analytics Solutions </h3><br>
-              <!-- <div class="media">
-                  <i class="fa-brands fa-facebook"></i>
+              <div class="media">
+                  <!-- <i class="fa-brands fa-facebook"></i> 
                   <i class="fa-brands fa-linkedin-in"></i>
                   <i class="fa-brands fa-github"></i>
                   <i class="fa-regular fa-envelope"></i> -->
-
-
-                <div class="media">
-                    <a href="https://www.linkedin.com/in/huseyn-abdullayev-566a74123/" target="_blank">
-                        <i class="fa-brands fa-linkedin-in"></i>
-                    </a>
-                    <a href="https://github.com/HuseynA28/AdPredictor-Web-services-model-deployment" target="_blank">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                    <a href="mailto:huseyn_abdullayev@outlook.de">
-                        <i class="fa-regular fa-envelope"></i>
-                    </a>
-                </div>
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-linkedin-in"></i><a href="https://www.linkedin.com/in/huseyn-abdullayev-566a74123/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                  <i class="fa-brands fa-github"></i><a href="https://github.com/HuseynA28/AdPredictor-Web-services-model-deployment" target="_blank"><i class="fa-brands fa-github"></i></a>
+                  <i class="fa-regular fa-envelope"></i><a href="mailto:huseyn_abdullayev@outlook.de"><i class="fa-regular fa-envelope"></i></a>
+                  
                 
 
               </div><br>
