--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <i class="fa-regular fa-envelope"></i> -->
                   <i class="fa-brands fa-facebook"></i>
                   <i class="fa-brands fa-linkedin-in"></i><a href="https://www.linkedin.com/in/huseyn-abdullayev-566a74123/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                  <i class="fa-brands fa-github"></i><a href="https://github.com/HuseynA28/AdPredictor-Web-services-model-deployment" target="_blank"><i class="fa-brands fa-github"></i></a>
+                  <i class="fa-brands fa-github"></i><a href="https://github.com/HuseynA28" target="_blank"><i class="fa-brands fa-github"></i></a>
                   <i class="fa-regular fa-envelope"></i><a href="mailto:huseyn_abdullayev@outlook.de"><i class="fa-regular fa-envelope"></i></a>
                   
                 
