--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <!--home section start-->
       <div class="content" id="home">
           <div class="text">
-              <h3><span class="name" style="color: #769EAF;">Huseyn Abdullayev</span><br><br> Data and Analytics Solutions </h3><br>
+              <h3><span class="name" style="color: #769EAF;">Huseyn Abdullayev</span><br><br> Data and ML Solutions </h3><br>
               <div class="media">
                   <!-- <i class="fa-brands fa-facebook"></i> 
                   <i class="fa-brands fa-linkedin-in"></i>
