--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
               </div><br>
               <!-- Download CV button -->
-              <a href="cv.docx" download="cv.docx">
+              <a href="cv.docx" download="">
                   <button class="download">Download CV <i class="fa-regular fa-circle-down"></i></button>
               </a>
           </div>
